<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:umadsdk="http://schemas.android.com/apk/res/com.yarin.android.TodayDate"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/remind_background"
    >
    <ImageView
    android:id="@+id/about_iv1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/about" 
    android:layout_marginTop="30dp"
    android:layout_centerHorizontal="true" 
    
    />
 <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/about_iv1"
    android:id="@+id/about_rl1"
    
 > 
 
 <TextView  
    android:id="@+id/about_tv1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textStyle="bold"
    android:text="@string/writer"
    android:textColor="@color/text"
    
    
   
    />
<TextView
    android:id="@+id/about_tv2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/about_tv1"
    android:layout_alignTop="@id/about_tv1"
    android:paddingLeft="15dp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:text="@string/kelly"
    android:textColor="@color/text"
    
    />
<TextView
    android:id="@+id/about_tv3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:layout_alignLeft="@id/about_tv1"
    android:layout_below="@id/about_tv1"
    
    android:textStyle="bold"
    android:text="@string/version"
    android:textColor="@color/text"
    /> 
<TextView
    android:id="@+id/about_tv4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:layout_toRightOf="@id/about_tv3"
    android:layout_alignTop="@id/about_tv3"
    android:paddingLeft="15dp"
    android:textStyle="bold"
    android:text="@string/version_NUMBER"
    android:textColor="@color/text"
     />
 </RelativeLayout>


   
</RelativeLayout>