<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_cart_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#ffefebe7">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:id="@+id/more_title_linear"
            >
            
    <include layout="@layout/title_view" />
    
     </LinearLayout>
     
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/more_title_linear"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="60.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="4.0dip"
                android:text="我的设置"
                android:textColor="#ff888888"
                android:textSize="16.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Follow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1.0dip"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/more_page_row1"
                        android:clickable="true"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemtop_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/myfollow"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="账号管理"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="4.0dip"
                android:text="客户端"
                android:textColor="#ff888888"
                android:textSize="16.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Client"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1.0dip"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/more_page_row4"
                        android:clickable="true"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemtop_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/setting_mor"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/setting_msgupdate"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <com.compus.more.SlideSwitch
            android:id="@+id/slideSwitch1"
            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"/>
                    </TableRow>

                    <TableRow
                        android:id="@+id/more_page_row11"
                        android:clickable="true"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemmiddle_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/setting_mor"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/setting_schedule"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <com.compus.more.SlideSwitch
            android:id="@+id/slideSwitch2"
            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"/>
                    </TableRow>
                    
                    <TableRow
                        android:id="@+id/more_page_row111"
                        android:clickable="true"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemmiddle_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/setting_mor"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/setting_push"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <com.compus.more.SlideSwitch
            android:id="@+id/slideSwitch3"
            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"/>
                    </TableRow>
                    
                    <TableRow
                        android:id="@+id/more_page_row5"
                        android:clickable="true"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemmiddle_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/feed_back"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="意见反馈"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/more_page_row6"
                        android:clickable="true"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itemmiddle_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/moreitems_version"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="检测更新"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/more_page_row7"
                        android:clickable="true"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/more_itembottom_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/about_page_mor"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="关于"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
